# SnapTalk-messenger-client

./: CMakeLists.txt
docs/: README.md
sourse/: messenger.proto
src/: main.cpp
src/gui/: chatwidget.ui  mainform.ui
